Added functionality for wireframe of Add Account.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@ DataSource.groovy
 
 # Don't Commit/Track The target/ Output Directory
 target/*
+
+# Standard List Of Non-Tracked Grails Files
+web-app/WEB-INF/classes
+web-app/WEB-INF/lib
+web-app/WEB-INF/grails-app
+web-app/WEB-INF/spring
+test/classes
+test/reports
+staging
